[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://src/Editor/Importer/Importer.gd" type="Script" id=2]
[ext_resource path="res://assets/font/HelvetiPixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Editor/Conductor.gd" type="Script" id=4]
[ext_resource path="res://assets/texture/checker.png" type="Texture" id=5]
[ext_resource path="res://styles/Editor_Theme.tres" type="Theme" id=6]
[ext_resource path="res://src/Editor/Transitions.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.886275, 0.886275, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.639216, 0.639216, 0.639216, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0941176, 0.0941176, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[sub_resource type="Animation" id=10]
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
margin_bottom = -48.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -534.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TabButtons" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 48.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Assets" type="Button" parent="TabButtons"]
margin_left = 306.0
margin_right = 406.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 6 )
text = "Assets"

[node name="Transitions" type="Button" parent="TabButtons"]
margin_left = 410.0
margin_right = 510.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 6 )
text = "Transitions"

[node name="Timeline" type="Button" parent="TabButtons"]
margin_left = 514.0
margin_right = 614.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 6 )
text = "Timeline"

[node name="Export" type="Button" parent="TabButtons"]
margin_left = 618.0
margin_right = 718.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 6 )
text = "Export"

[node name="Tabs" type="Control" parent="."]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 552.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Importer" type="Control" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="HBoxContainer" parent="Tabs/Importer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 344.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -406.0
size_flags_vertical = 0
custom_constants/separation = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Animations" type="Panel" parent="Tabs/Importer/Sections"]
margin_right = 220.0
margin_bottom = 42.0
rect_min_size = Vector2( 220, 42 )
rect_pivot_offset = Vector2( -337, 48 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tabs/Importer/Sections/Animations"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -85.0
text = "Animations"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Tabs/Importer/Sections/Animations"]
margin_left = 135.0
margin_right = 220.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assets" type="VBoxContainer" parent="Tabs/Importer/Sections/Animations"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="Panel" parent="Tabs/Importer/Sections"]
margin_left = 225.0
margin_right = 445.0
margin_bottom = 42.0
rect_min_size = Vector2( 220, 42 )
rect_pivot_offset = Vector2( -337, 48 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tabs/Importer/Sections/Effects"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -85.0
text = "Effects"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Tabs/Importer/Sections/Effects"]
margin_left = 135.0
margin_right = 220.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assets" type="VBoxContainer" parent="Tabs/Importer/Sections/Effects"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundFX" type="Panel" parent="Tabs/Importer/Sections"]
margin_left = 450.0
margin_right = 670.0
margin_bottom = 42.0
rect_min_size = Vector2( 220, 42 )
rect_pivot_offset = Vector2( -337, 48 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tabs/Importer/Sections/SoundFX"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -85.0
text = "Sound FX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Tabs/Importer/Sections/SoundFX"]
margin_left = 135.0
margin_right = 220.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assets" type="VBoxContainer" parent="Tabs/Importer/Sections/SoundFX"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="Tabs/Importer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -244.0
margin_bottom = -220.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Importer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Asset Importer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Panel" parent="Tabs/Importer"]
anchor_bottom = 1.0
margin_top = 24.0
margin_right = 320.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fields" type="VBoxContainer" parent="Tabs/Importer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 40.0
margin_right = -24.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="Tabs/Importer/Settings/Fields"]
margin_right = 272.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Tabs/Importer/Settings/Fields/Music"]
margin_right = 188.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
align = 1
editable = false
placeholder_text = "Load Music"

[node name="Button" type="Button" parent="Tabs/Importer/Settings/Fields/Music"]
margin_left = 192.0
margin_right = 272.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
theme = ExtResource( 6 )
text = "Load"

[node name="Bpm" type="HBoxContainer" parent="Tabs/Importer/Settings/Fields"]
margin_top = 28.0
margin_right = 272.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 30 )

[node name="Panel" type="Panel" parent="Tabs/Importer/Settings/Fields/Bpm"]
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )

[node name="Label" type="Label" parent="Tabs/Importer/Settings/Fields/Bpm/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 14 )
text = "BPM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="SpinBox" parent="Tabs/Importer/Settings/Fields/Bpm"]
margin_left = 84.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
max_value = 200.0
value = 128.0
allow_greater = true
align = 1

[node name="Transitions" type="Control" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="Sprite" parent="Tabs/Transitions"]
position = Vector2( 832, 264 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="SpriteSheet" type="Sprite" parent="Tabs/Transitions/Preview"]
position = Vector2( 2.86102e-06, -7.62939e-06 )
scale = Vector2( 0.25, 0.25 )
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tabs/Transitions/Preview/SpriteSheet"]
autoplay = "loop_6"
anims/loop_6 = SubResource( 10 )

[node name="AssetSelectors" type="VBoxContainer" parent="Tabs/Transitions"]
margin_left = 64.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationOption" type="OptionButton" parent="Tabs/Transitions/AssetSelectors"]
margin_right = 192.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 6 )
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsOption" type="OptionButton" parent="Tabs/Transitions/AssetSelectors"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 6 )
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxOption" type="OptionButton" parent="Tabs/Transitions/AssetSelectors"]
margin_top = 88.0
margin_right = 192.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 6 )
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="Tabs/Transitions"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -244.0
margin_bottom = -220.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Transitions/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Transition Editor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timeline" type="Control" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Timeline"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "TIMELINE GO HERE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="Tabs/Timeline"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -244.0
margin_bottom = -220.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Timeline/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Timeline"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Export" type="Control" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Export"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Build and Export options GO HERE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="Tabs/Export"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -244.0
margin_bottom = -220.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Export/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Build / Export"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Toolbar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Toolbar/Buttons"]
margin_left = 462.0
margin_right = 510.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
theme = ExtResource( 6 )
text = "PLAY"

[node name="Stop" type="Button" parent="Toolbar/Buttons"]
margin_left = 514.0
margin_right = 562.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
theme = ExtResource( 6 )
text = "STOP"

[node name="Volume" type="HSlider" parent="Toolbar"]
margin_left = 616.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 32.0
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 12 )
min_value = -40.0
max_value = 0.0
step = 10.0
value = -10.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conductor" type="AudioStreamPlayer" parent="."]
script = ExtResource( 4 )
